packages/svelte/tests/compiler-errors/samples/css-global-block-multiple-2/main.svelte
<style>
	/* invalid */
	:global, :global .y {
		z { color: red }
	}
</style>
